--- a/style.css
+++ b/style.css
@@ -6,10 +6,6 @@
     font-family: 'Roboto';
 }
 
-body {
-    overflow-x: hidden;
-}
-
 .header {
     min-height: 100vh;
     width: 100%;
@@ -17,6 +13,7 @@ body {
     background-position: center;
     background-size: cover;
     position: relative;
+    overflow: hidden;
 }
 
 nav {
